# itmo-project

./: .env  Dockerfile  README.md  docker-compose.yaml  hello.py  pyproject.toml  requirements.txt
app/: __init__.py  agent.py  ddg_agent.py  main.py  models.py  tavily_agent.py  utils.py
llm/: __init__.py  generation.py  models.py  prompts.yaml
